examples/sso-kubernetes/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: keycloak-showcase-deployment
spec:
   replicas: 3
   selector:
      matchLabels:
         app: keycloak-showcase
   minReadySeconds: 10
   strategy:
      type: RollingUpdate
      rollingUpdate:
         maxUnavailable: 1
         maxSurge: 1
   template:
      metadata:
         labels:
            app: keycloak-showcase
      spec:
         containers:
         - name: keycloak-showcase
           image: gunnaraccso/camunda-showcase-keycloak:1.1.0-SNAPSHOT
           ports:
           - containerPort: 8080
         hostAliases:
         - ip: 10.0.75.1
           hostnames:
           - armstrong02
# Redis Session Cache not yet in use
#           - name: SESSION_STORE_TYPE
#             value: redis
#           - name: REDIS_HOST
#             value: redis-service
