examples/sso-kubernetes/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
   name: keycloak-showcase-service
   labels:
      app: keycloak-showcase
spec:
   type: ClusterIP
   ports: 
   - port: 8080
     targetPort: 8080
   selector:
      app: keycloak-showcase
